src/components/mobo/style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
:root{
    --google-green : #0F9D58;
    --google-red : #DB4437;
    --google-blue : #4285F4;
    --google-yellow : #F4B400;
}

/* Navigation  */
.navigation-container{
    color: white;
    /* width: 100vw; */
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #242424;
    padding: 10px;
}
.navigation-container img{
    height: 30px; width: 30px;
}
.dsc-branding{
    display: flex;
    justify-content: center;
    gap: 15px;
    align-items: center;
    font-size: small;
}
.dsc-menu img{
    filter: invert();
}

/* Hero Component  */
.lead-quote{
    background-color: whitesmoke;
    padding: 30px;
    margin-top: 50px;
    margin-bottom: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}
.lead-quote img{
    height: 110px;
    width: 110px;
    border-radius: 50%;
    object-fit: cover;
    border-top: 5px solid var(--google-blue);
    border-left: 5px solid var(--google-green);
    border-right: 5px solid var(--google-yellow);
    border-bottom: 5px solid var(--google-red);

}
.lead-quote h6{
    text-align: center;
    font-size: 10px;
    padding: 1px;
}


.hero-container{
    /* padding: 4rem; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.hero-content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 14px;
}
.hero-content p{
    padding: 0px 20px 0px 20px;
    line-height: 25.5px;
    text-align: left;
    font-size: 12px;
    text-align: center;
}
p.para2{
    text-align: center;
    font-size: 12px;
}
.hero-content button{
    background: white;
    outline: none;
    padding: 7px;
    font-family: 'Open Sans', sans-serif;
    border-radius: 30px;
    width: 95px;
    margin-top: 40px;
    font-weight: 700;
    border-top:  2.5px solid var(--google-blue);
    border-left:  2.5px solid var(--google-red);
    border-bottom:  2.5px solid var(--google-green);
    border-right: 2.5px solid var(--google-yellow);
}
.hero-thumb{
    /* height: px; */
    width: 100vw;
}
.branding{
    font-weight: 800;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 4em;
}
.branding img{
    height: 50px; width: 50px;
}


/* About Section  */
.section1{
    padding: 15px;
    text-align: left;
    margin-bottom: 20px;
}
.section1 h2{
    color: grey;
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 2rem;
}
.section1 h1{
    margin-top: 10px;
    font-weight: 700;
    font-size: 2.25rem;
    line-height: 2.25rem;
}
.section1 h3{
    font-size: 2.25em;
    background: linear-gradient(45deg, var(--google-blue), var(--google-red), var(--google-green),var(--google-yellow));
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
}
.eventPicturesSlider img{
    width: 100%;
    margin-top: 20px;
    
}   
.section1 button{
    border: none;
    background: white;
    height: 40px;
    font-weight: 700;
    outline: none;
    border-radius: 32px;
    width: 150px;
    color: #242424;
    font-size: 14px;
    border-top:  2.5px solid var(--google-blue);
    border-left:  2.5px solid var(--google-red);
    border-bottom:  2.5px solid var(--google-green);
    border-right: 2.5px solid var(--google-yellow);
}
.pastevents{
    margin-top: 7px;
    display: flex;
    justify-content: right;
    align-items: center;

}
.pastevents img{
    height: 40px;
}
.mission{
    padding: 10px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.mission h3{
    font-size: 16px;
}
.mission p{
    font-size: 15px;
}
.footer-container{
    background-color: #242424;
    color: white;
    padding: 20px;
}
.footer-container .branding{
    font-weight: 100;
    font-size: 12px;

}
.socials{
    color: white;
    display: flex;
    justify-content: center;
    gap: 17px;
    align-items: center;
}
.socials a{
    text-decoration: none;
    color: white;
}
.socials img{
    filter: invert();
    height: 15px;
    width: 15px;
}
.copyright{
    font-size: 9px;
    margin-top: 20px;
    
}


/* Team Component  */
.team-container{
    /* padding: 15px; */
    padding-top: 10px;
    background-color: whitesmoke;
}
.section-title{
    text-align: left;  color: black;
    margin-bottom: 10px; margin-left: 10px;
    font-weight: 700;
    font-size: 2rem;
    line-height: 2.25rem;
    padding: 12px;
}
.team-container h4{
    margin: 5px; 
    padding: 7px;
    font-weight: 700;
    text-align: right; 
    color: grey;
    /* background: linear-gradient(45deg, var(--google-blue), var(--google-red), var(--google-green),var(--google-yellow));
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent; */

}
.team-members{
    display: flex;
    flex-direction: row;
    /* justify-content: center; */
    align-items: center;
    gap: 15px;
    margin-top: 25px;
    margin-bottom: 50px;
    overflow-x: auto;
    white-space: nowrap;
    max-width: 370px;
    padding-left: 20px;
}
.team{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 25px;
    margin-bottom: 50px;
    overflow-x: auto;
    white-space: nowrap;
    max-width: 100%;
}
.team-members h2{
    font-size: 9px;
   
}
.member{
    flex: 0 0 auto;

}
.team-members::-webkit-scrollbar{
    height: 10px; background-color: #f5f5f5;;
}
.team-members::-webkit-scrollbar-thumb {
    background-color: #f5f5f5;
    border-radius: 5px;
  }
  .team-members::-webkit-scrollbar-thumb:hover {
    background-color: #f5f5f5;
  }
.member img{
    width: 70px;
    height: 70px;
    border-radius: 50%;
}
.member:first-child img{
    border-top:  2px solid var(--google-blue);
    border-left:  2px solid var(--google-red);
    border-bottom:  2px solid var(--google-green);
    border-right: 2px solid var(--google-yellow);
}

